Anadido logica de equipos

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,9 +9,15 @@
 </head>
 <body>
 
-<a href="http://localhost:8000/login">Inicia Sesion</a>
-<a routerLink="/usuario">Página Personal</a>
-<a routerLink="/equipo">Equipos</a>
+
+<nav>
+
+  <a href="http://localhost:8000/login">Inicia Sesion</a>
+  <a routerLink="/usuario">Página Personal</a>
+  <a routerLink="/equipo">Equipos</a>
+
+
+</nav>
 
 
 <router-outlet></router-outlet>
